<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_county"
            android:title="@string/my_county">
            <menu>
            </menu>
        </item>
        <item
            android:id="@+id/my_function"
            android:title="@string/function">
            <menu>
                <item
                    android:id="@+id/item_location"
                    android:icon="@drawable/ic_location"
                    android:title="@string/location"/>
                <item
                    android:id="@+id/item_add"
                    android:icon="@drawable/ic_add"
                    android:title="@string/add_county"/>
                <item
                    android:id="@+id/item_delete"
                    android:icon="@drawable/ic_remove"
                    android:title="@string/delete_county"/>
                <item
                    android:id="@+id/item_about"
                    android:icon="@drawable/ic_info_outline_black_24dp"
                    android:title="@string/about"/>
            </menu>
        </item>
    </group>
</menu>